# university-assignments

./: README.md
semester 1/: main.py
semester 1/domain/: entities.py  validators.py
semester 1/files/: grades.txt  students copy.txt  students.txt  subjects copy.txt  subjects.txt
semester 1/repository/: file_repo.py  file_repo_lab.py  file_repo_old.py  repo.py
semester 1/service/: grade_service.py  student_service.py  subject_service.py
semester 1/ui/: console.py
semester 2/: CMakeLists.txt  Car.cpp  Car.h  CarRepository.cpp  CarRepository.h  Observer.h  Service.cpp  Service.h  Undo.cpp  Undo.h  Validators.h  WashList.cpp  WashList.h  WashListGUI.cpp  WashListGUI.h  gui.cpp  gui.h  main.cpp  qtui.cpp  qtui.h  qtui.ui  ui.cpp  ui.h
semester 3/: build.gradle  settings.gradle
semester 3/src/main/java/: module-info.java
semester 3/src/main/java/com/example/socialnetworkgui/: HelloApplication.java  HelloController.java  Main.java  MessageAlert.java
semester 3/src/main/java/com/example/socialnetworkgui/controller/: DMController.java  DemoController.java  UserController.java
semester 3/src/main/java/com/example/socialnetworkgui/domain/: Entity.java  Friendship.java  Message.java  Tuple.java  User.java
semester 3/src/main/java/com/example/socialnetworkgui/repository/: DBRepository.java  FileRepository.java  FriendshipDBRepository.java  FriendshipFileRepository.java  MemoryRepository.java  MessageDBRepository.java  Repository.java  UserDBRepository.java  UserFileRepository.java
semester 3/src/main/resources/com/example/socialnetworkgui/: UserView.fxml
(+14 files in other folders)
